patching flickering issue

--- a/src/less/home.less
+++ b/src/less/home.less
@@ -9,6 +9,7 @@
     background-position: 50% 80%;
     background-size: cover;
     background-repeat: no-repeat;
+    backface-visibility: hidden;
     height: 100vh;
     position: relative;
     transition: background 0.5s;
